# CryptoSphereAPI

./: app.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_12_12_1112-4a8e30f1d53b_create_tables.py  2024_12_26_1224-0c73f61f75a7_update_coinstatisticsorm.py
api/: config.py  main.py
api/crud/: coins_crud.py  transactions_crud.py  users_crud.py
api/database/: db_helper.py  models.py
api/database/triggers/: calc_coin_statistics_trigger.sql  calc_missing_transaction_data_trigger.sql  coin_statistics_trigger.sql
api/schemas/: __init__.py  coins_crud_schemas.py  crud_coins_schemas.py  crud_users_schemas.py  users_crud_schemas.py
api/v1/crud/: coins_crud.py
api/v1/views/: coins_views.py  users_views.py
api/views/: coins_views.py  transactions_views.py  users_views.py
database/: CRUD.py  config.py  models.py
schemas/: api_schemas.py
src/database/: config.py  crud.py  models.py  triggers.py
src/database/crud/: coins_crud.py  crud_coin.py  crud_user.py  users_crud.py
src/schemas/: api_schemas.py  common_schemas.py  crud_coin_schemas.py  crud_coins_schemas.py  crud_schemas.py  crud_user_schemas.py  crud_users_schemas.py
src/views/: coins_views.py  users_views.py
tests/: fixtures.py  test_coins_crud.py  test_coins_crud_schemas.py  test_users_crud.py  test_users_crud_schemas.py
views/: users_views.py
